# secids

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
_CPack_Packages/Linux/TGZ/secids-0.1.0-Linux/lib/cmake/secids/: secidsConfig.cmake  secidsTargets-noconfig.cmake  secidsTargets.cmake
cmake/: secidsConfig.cmake.in
include/secids/: cusip64.hpp  figi64.hpp  isin64.hpp  iso3166_country.hpp  iso4217_currency.hpp  mic32.hpp  ric64.hpp  secids.hpp  sedol64.hpp
include/secids/detail/: alpha_code16.hpp  cli_support.hpp
include/secids/openfigi/: vocab_ids.hpp  vocab_loader.hpp  vocab_registry.hpp  vocab_snapshot.hpp  vocab_types.hpp
include/secids/runtime/: iso_data_loader.hpp
src/: cusip64_cli.cpp  figi64_cli.cpp  isin64_cli.cpp  openfigi_vocab_cli.cpp  ric64_cli.cpp  sedol64_cli.cpp
test/: cusip64_test.cpp  figi64_test.cpp  isin64_test.cpp  iso3166_country_test.cpp  iso4217_currency_test.cpp  iso_data_loader_test.cpp  mic32_test.cpp  openfigi_vocab_test.cpp  ric64_test.cpp  sedol64_test.cpp
tools/: fetch_iso_sources.sh  fetch_openfigi_values.sh  generate_iso3166_country_header.py  generate_iso4217_currency_header.py  generate_openfigi_vocab_ids.py  update_iso_sources.sh
